--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-theme: jekyll-theme-minimal
 title: Lucas Suchy
-description: Short portfolio test
+description: Literalmente uma copia do acaba semestre porem tentando manter atualizado.
